# atlas-intelligence-platform-

./: .editorconfig  .env.example  AGENTS.md  AI_PROVIDER_IMPLEMENTATION_REPORT.md  API_CONFIGURATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONNECTOR_IMPLEMENTATION_REPORT.md  CONTRIBUTING.md  DATA_PIPELINE_IMPLEMENTATION_REPORT.md  Dockerfile  FINAL_PRODUCTION_AUDIT.md  FINAL_VALIDATION_REPORT.md  IMPLEMENTATION_GAP_ANALYSIS.md  LICENSE  MILESTONE_REPORT.md  PROJECT_MEMORY.md  README.md  RELEASE_NOTES_v1.0.1.md  RELEASE_READINESS_REPORT.md  ROADMAP.md  SECURITY.md  SUPPORT.md  docker-compose.yml  pyproject.toml
backend/: __init__.py  alembic.ini  pyproject.toml  test_63c54e98
backend/ai_providers/: __init__.py
backend/ai_providers/core/: __init__.py  base.py  registry.py  types.py
backend/ai_providers/observability/: __init__.py  metrics.py
backend/ai_providers/prompting/: __init__.py  framework.py
backend/ai_providers/providers/: __init__.py  providers.py
backend/ai_providers/response/: __init__.py  processor.py
backend/api/: __init__.py  main.py
backend/api/v1/: __init__.py  router.py
backend/connectors/: __init__.py
backend/connectors/base/: __init__.py  connector.py  registry.py  types.py
backend/connectors/providers/: __init__.py
backend/connectors/utils/: __init__.py  helpers.py
backend/core/: __init__.py  config.py  logging.py  security.py
backend/db/: __init__.py  session.py
backend/db/seeds/: __init__.py  cli.py  feature_flags.py  plans.py  roles_permissions.py
backend/intelligence/: __init__.py  base.py  engine.py
backend/intelligence/causal/: reasoning.py
backend/intelligence/indicators/: engine.py
backend/intelligence/knowledge/: graph.py
backend/intelligence/patterns/: detector.py
backend/intelligence/signals/: detector.py
backend/migrations/: __init__.py  env.py
backend/migrations/versions/: 001_initial_schema.py
backend/models/: __init__.py
backend/models/common/: __init__.py  associations.py  base.py
backend/models/evidence/: __init__.py  evidence.py
backend/models/knowledge/: __init__.py  knowledge.py
backend/models/monetization/: __init__.py  feature_flag.py  organization.py  usage_record.py
backend/models/notifications/: __init__.py  notification.py
backend/models/projects/: __init__.py  project.py
backend/models/reports/: __init__.py  report.py
backend/models/signals/: __init__.py  signal.py
backend/monetization/: __init__.py
backend/notifications/: __init__.py  service.py  types.py
backend/pipeline/: __init__.py  engine.py  types.py
backend/reporting/: __init__.py  engine.py  export.py  scheduler.py  types.py
backend/schemas/: __init__.py
backend/services/: __init__.py  intelligence_service.py  opportunity_service.py  user_service.py
backend/tests/: __init__.py  conftest.py
backend/utils/: __init__.py
docs/: AI_PROVIDERS.md  CONNECTOR_FRAMEWORK.md  DEPLOYMENT.md  DEVELOPMENT_GUIDE.md  PIPELINE.md  README.md
docs/project_memory/: architecture_log.md  decision_log.md  future_improvements.md  implementation_log.md  known_issues.md
frontend/: .env.local.example  Dockerfile  FINAL_FRONTEND_AUDIT.md  README.md  jest.config.js  jest.setup.js  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/__tests__/: components.test.tsx  utils.test.ts
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/hooks/: index.ts  useAdmin.ts  useAuth.tsx  useIntelligence.ts  useNotifications.ts  useOpportunities.ts  useReports.ts  useSubscription.ts
frontend/services/: admin-service.ts  ai-provider-service.ts  auth-service.ts  connector-service.ts  index.ts  intelligence-service.ts  notification-service.ts  opportunity-service.ts  report-service.ts  subscription-service.ts
frontend/store/: auth-store.ts
frontend/types/: index.ts
infrastructure/: README.md
scripts/: dev.sh  test.sh
tests/: conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_config.py  test_models.py  test_security.py
(+143 files in other folders)
