[project]
name = "atlas-platform"
version = "1.0.1-beta"
description = "AI-Powered Business Intelligence Operating System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "ATLAS Team", email = "team@atlas-platform.ai"}
]
keywords = ["ai", "business-intelligence", "machine-learning", "fastapi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # FastAPI and web
    "fastapi>=0.110.0",
    "fastapi-utils>=0.2.1",
    "starlette>=0.37.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    
    # Redis
    "redis>=5.0.0",
    "aioredis>=2.0.1",
    
    # Pydantic
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pydantic[email]>=2.6.0",
    
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.0",
    
    # HTTP client
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    
    # AI/ML (core integrations)
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic[email]>=2.6.0",
    "orjson>=3.10.0",
    "uvicorn[standard]>=0.29.0",
    "sentry-sdk>=2.0.0",
    
    # Logging
    "structlog>=24.1.0",
    "loguru>=0.7.0",
    
    # Data processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.27.0",
    "faker>=23.0.0",
    
    # Code quality
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    
    # Development
    "ipython>=8.22.0",
    "ipdb>=0.13.0",
    "debugpy>=1.8.0",
    
    # Database
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
]

frontend = [
    "next>=14.2.0",
    "react>=18.3.0",
    "react-dom>=18.3.0",
    "typescript>=5.4.0",
]

[project.urls]
Homepage = "https://atlas-platform.ai"
Documentation = "https://docs.atlas-platform.ai"
Repository = "https://github.com/atlas-platform/atlas"
Changelog = "https://github.com/atlas-platform/atlas/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atlas_platform"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"*/alembic/env.py" = ["I"]  # Import order handled by alembic conventions

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["atlas_platform"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
